[gd_scene load_steps=22 format=3 uid="uid://bmmct0mqv4pn2"]

[ext_resource type="Script" path="res://Puzzles/Packing Game/packing.gd" id="1_iyrc4"]
[ext_resource type="Texture2D" uid="uid://diuxgb06yr656" path="res://Resources/bgs/Packing Game/Packing Game BG.png" id="2_pq4qw"]
[ext_resource type="Texture2D" uid="uid://c5g5abwxcg07h" path="res://Resources/bgs/Packing Game/Layer 8.png" id="3_piydg"]
[ext_resource type="Texture2D" uid="uid://cvx65a2nd5ymt" path="res://Resources/bgs/Packing Game/Layer 7.png" id="5_8igmv"]
[ext_resource type="Texture2D" uid="uid://djgnwawuurels" path="res://Resources/bgs/Packing Game/Layer 9.png" id="6_rhany"]
[ext_resource type="Texture2D" uid="uid://rew1lqbq8rbb" path="res://Resources/bgs/Packing Game/Layer 11.png" id="7_ylu10"]
[ext_resource type="Texture2D" uid="uid://conlitm4lf0qs" path="res://Resources/bgs/Packing Game/Layer 10 copy.png" id="8_wn450"]
[ext_resource type="Texture2D" uid="uid://caxuai53dkc1t" path="res://Resources/bgs/Packing Game/Layer 12.png" id="9_dnbwk"]
[ext_resource type="Texture2D" uid="uid://dlbue1l6cj8er" path="res://Resources/bgs/Packing Game/Layer 13.png" id="10_8n664"]
[ext_resource type="Script" path="res://Puzzles/DraggyDroppy/Thingy.gd" id="10_dlkv1"]
[ext_resource type="Texture2D" uid="uid://ccxd15uohkw4h" path="res://Resources/bgs/Packing Game/Layer 14.png" id="11_4ecwa"]
[ext_resource type="Texture2D" uid="uid://cnlygndfd5ygc" path="res://Resources/bgs/Packing Game/Layer 16.png" id="12_vln36"]
[ext_resource type="Texture2D" uid="uid://bl3rlgfu1qf0r" path="res://Resources/bgs/Packing Game/Layer 17.png" id="13_vc54k"]
[ext_resource type="Texture2D" uid="uid://c8byu1kwlqeq8" path="res://Resources/bgs/Packing Game/Layer 18.png" id="14_cl1js"]
[ext_resource type="Texture2D" uid="uid://cgv81iyajapa4" path="res://Resources/bgs/Packing Game/Layer 20.png" id="15_onsjt"]
[ext_resource type="Texture2D" uid="uid://cx0wyefpw584i" path="res://Resources/UImenus/Blank.png" id="16_3nweq"]
[ext_resource type="Texture2D" uid="uid://b3ybsbnw2p8t7" path="res://Resources/bgs/Packing Game/Layer 21.png" id="16_c13vq"]
[ext_resource type="Texture2D" uid="uid://cfxvilwxxjd73" path="res://Resources/bgs/Packing Game/Layer 19.png" id="17_ytfan"]
[ext_resource type="Texture2D" uid="uid://dmnwute5gsita" path="res://Resources/bgs/Packing Game/RingBox.png" id="19_k3r1w"]
[ext_resource type="Script" path="res://Puzzles/Packing Game/RingBox.gd" id="20_nqhmn"]
[ext_resource type="AudioStream" uid="uid://dfen8dx8i3svt" path="res://Resources/Sounds/arrow.mp3" id="21_o4huo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iyrc4")
Total_Number_Of_Objects = 14
metadata/_edit_horizontal_guides_ = [-19.0]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_pq4qw")
centered = false

[node name="Object1" type="Sprite2D" parent="."]
position = Vector2(1023, 212)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_piydg")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object2" type="Sprite2D" parent="."]
position = Vector2(1022, 89)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_8igmv")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object3" type="Sprite2D" parent="."]
position = Vector2(985, 334)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_rhany")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object4" type="Sprite2D" parent="."]
position = Vector2(1056, 333)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_ylu10")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object5" type="Sprite2D" parent="."]
position = Vector2(986, 410)
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_wn450")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object6" type="Sprite2D" parent="."]
position = Vector2(1060, 407)
scale = Vector2(0.6, 0.6)
texture = ExtResource("9_dnbwk")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object7" type="Sprite2D" parent="."]
position = Vector2(987, 514)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_8n664")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object8" type="Sprite2D" parent="."]
position = Vector2(1059, 517)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_4ecwa")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object9" type="Sprite2D" parent="."]
position = Vector2(132, 139)
scale = Vector2(0.6, 0.6)
texture = ExtResource("12_vln36")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object10" type="Sprite2D" parent="."]
position = Vector2(161, 201)
scale = Vector2(0.6, 0.6)
texture = ExtResource("13_vc54k")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object11" type="Sprite2D" parent="."]
position = Vector2(132, 528)
scale = Vector2(0.6, 0.6)
texture = ExtResource("14_cl1js")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object12" type="Sprite2D" parent="."]
position = Vector2(159, 365)
scale = Vector2(0.6, 0.6)
texture = ExtResource("15_onsjt")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object13" type="Sprite2D" parent="."]
position = Vector2(81, 377)
scale = Vector2(0.6, 0.6)
texture = ExtResource("16_c13vq")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Object14" type="Sprite2D" parent="."]
position = Vector2(104, 282)
scale = Vector2(0.6, 0.6)
texture = ExtResource("17_ytfan")
script = ExtResource("10_dlkv1")
draggable = true

[node name="Blank1" type="Sprite2D" parent="."]
position = Vector2(587.5, 322.5)
scale = Vector2(575, 413)
texture = ExtResource("16_3nweq")
script = ExtResource("10_dlkv1")

[node name="RingBox" type="Sprite2D" parent="."]
position = Vector2(946, 150)
rotation = -0.486846
texture = ExtResource("19_k3r1w")
script = ExtResource("20_nqhmn")
ScenePath = "res://Scenes/ring.tscn"

[node name="Door" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_o4huo")

[connection signal="activate_ring" from="." to="RingBox" method="activate_ring"]
